actualizacion fotos de proyectos y titulos

--- a/index.html
+++ b/index.html
@@ -316,45 +316,45 @@
             <h2>PORTFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="/img/1.png" alt="">
+                    <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=738,fit=crop/dJoGg6ME7jU4Bqpr/1-m6LDq6Qz54IwD9z1.png" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>CV</h3>
+                        <p>HTML</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="/img/2.png" alt="">
+                    <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=738,fit=crop/dJoGg6ME7jU4Bqpr/2-YKbaLBG73qhy0x4z.png" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>HTML & CSS</h3>
+                        <p>CUPPON</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="/img/3.png" alt="">
+                    <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=738,fit=crop/dJoGg6ME7jU4Bqpr/3-YBg8LP9J1Xux8JNk.png" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>HTML, CSS & FLEX</h3>
+                        <p>IGUANA</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="/img/4.png" alt="">
+                    <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=738,fit=crop/dJoGg6ME7jU4Bqpr/4-YZ97WJBL4wsVNR5a.png" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>HTML, CSS FLEX & BOOTSTRAP</h3>
+                        <p>CV_2</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="/img/1.png" alt="">
+                    <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=738,fit=crop/dJoGg6ME7jU4Bqpr/1-m6LDq6Qz54IwD9z1.png" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>CV</h3>
+                        <p>HTML</p>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="/img/2.png" alt="">
+                    <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=738,fit=crop/dJoGg6ME7jU4Bqpr/4-YZ97WJBL4wsVNR5a.png" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>HTML, CSS FLEX & BOOTSTRAP</h3>
+                        <p>CV_2</p>
                     </div>
                 </div>
             </div>
