correciones gramaticales a algunas palabras

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h3>Datos Personales</h3>
                     <ul>
                         <li>
-                            <strong>Naci</strong>
+                            <strong>Nací</strong>
                             22-11-1988
                         </li>
                         <li>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-headphones"></i>
-                            <span>MUSICA</span>
+                            <span>MÚSICA</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-plane"></i>
@@ -258,7 +258,7 @@
                     
                     
                     <div class="item izq">
-                        <h4>Ingenieria en administración</h4>
+                        <h4>Ingeniería en administración</h4>
                         <span class="casa">Universidad tecnológica de Chile Inacap</span>
                         <span class="fecha">2013 - 2019</span>
                         <p>Graduado en Ingeniería en Administración de Empresas con Mención en Marketing, poseo una sólida formación en la combinación de principios de ingeniería con prácticas administrativas, especializándome en estrategias de marketing efectivas. Estoy capacitado para analizar tendencias de mercado, gestionar la relación con clientes y promover productos o servicios innovadores. Mi educación me ha dotado de habilidades clave en el uso de tecnologías de información para optimizar procesos empresariales, así como en liderazgo de equipos y gestión de proyectos. Mi enfoque estratégico está respaldado por una capacidad analítica para tomar decisiones basadas en datos, preparándome para roles que demandan innovación y una gestión estratégica eficiente, como gerencia de marketing y consultoría empresarial.
@@ -389,7 +389,7 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-mobile-screen"></i>
-                                Llamanos: +56 94510 9786
+                                Llámanos: +56 94510 9786
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
