--- a/index.html
+++ b/index.html
@@ -414,6 +414,10 @@
             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="#"><i class="fa-solid fa-rss"></i></a>
         </div>
+        <div class="text-center">
+            <p class="mb-0">2023. Todos los derechos reservados.</p>
+        </div>
+        
     </footer>
 
     <script src="script.js"></script>
